new files + & (still needs some work)

--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -14,156 +14,134 @@
 .backdrop-form {
   width: 528px;
   height: 581px;
-  background-color: #FFFFFF;
+  background-color: $hero-color;
   display: flex;
   flex-direction: column;
   position: relative;
   padding: 40px;
   display: flex;
   justify-content: center;
-  filter: drop-shadow(2px 4px 6px black)
+  filter: drop-shadow(2px 4px 6px black);
+  &__title {
+    font-family: 'Roboto';
+    margin-left: 10px;
+    margin-bottom: 13px;
+    display: flex;
+    justify-content: center;
+  }
+  &__text {
+    text-align: start;
+    margin-top: 13px;
+    font-family: 'Roboto';
+  }
+  &__icon {
+    transform: translate(15px, -30px);
+    transition: fill 250ms $modal-transition 100ms;
+    width: 18px;
+    height: 18px;
+    &:hover {
+      fill: $header-color;
+    }
+  }
+  &__icon-close {
+    width: 18px;
+    height: 18px;
+    transition: fill 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 25ms;
+  }
+  &__info {
+    font-family: 'Roboto';
+    color: #757575;
+    margin: 0 0 4px 0;
+    font-weight: 400;
+    font-size: 12px;
+  }
+  &__button {
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 5px;
+    top: 8px;
+    right: 8px;
+    background: #FFFFFF;
+    display: flex;
+    position: absolute;
+    cursor: pointer;
+    &:hover {
+      fill: $header-color;
+    }
+  }
+  &__input {
+    display: flex;
+    flex-direction: column;
+    &:hover {
+      fill: $header-color;
+    }
+  }
+  &__fill {
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding-left: 40px;
+    height: 40px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.01em;
+    cursor: pointer;
+    transition: border 250ms cubic-bezier(0.165, 0.84, 0.44, 1) 100ms;
+    &:hover {
+      border: 1px solid $header-color;
+    }
+  }
+  &__text-fill {
+    font-family: 'Roboto';
+    width: 508px;
+    height: 120px;
+    padding: 12px 16px;
+    cursor: pointer;
+  }
+  &__box {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    display: flex;
+    align-items: center;
+  }
+  &__button-send {
+    font-family: 'Roboto';
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 50px;
+    background: $modal-color;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: 1px solid $hero-color;
+    color: $hero-color;
+    margin: 0 auto;
+  }
+  &__checkbox {
+    width: 16px;
+    height: 15px;
+    margin-right: 9px;
+  }
+  &__agree {
+    font-family: 'Roboto';
+    color: $header-contact;
+  }
+  &__rule {
+    font-family: 'Roboto';
+    text-decoration: underline;
+    color: $header-color;
+  }
 }
 
 .is-hidden {
   opacity: 0;
   pointer-events: none;
-}
-
-.backdrop-form__title {
-  font-family: 'Roboto';
-  margin-left: 10px;
-  margin-bottom: 13px;
-}
-
-.backdrop-form__text {
-  font-family: 'Roboto';
-  text-align: start;
-  margin: 0 0 13px 0;
-}
-
-.backdrop-form__icon:hover .backdrop-form {
-  fill: #2196F3;
-}
-
-.backdrop-form__icon-close {
-  width: 18px;
-  height: 18px;
-  transition: fill 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 25ms;
-}
-
-.backdrop-form__button {
-  border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 5px;
-  top: 8px;
-  right: 8px;
-  background: #FFFFFF;
-  display: flex;
-  position: absolute;
-  cursor: pointer;
-}
-
-.backdrop-form__button:hover {
-  fill: #2196F3;
-}
-
-.backdrop-form__info {
-  font-family: 'Roboto';
-  color: #757575;
-  margin: 0 0 4px 0;
-  font-weight: 400;
-  font-size: 12px;
-}
-
-.backdrop-form__input {
-  display: flex;
-  flex-direction: column;
-}
-
-.backdrop-form__input:hover {
-  fill: #2196F3;
-}
-
-.backdrop-form__fill:hover {
-  border: 1px solid #2196F3;
-}
-
-.backdrop-form__fill {
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  padding-left: 40px;
-  height: 40px;
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 14px;
-  letter-spacing: 0.01em;
-  cursor: pointer;
-  transition: border 250ms cubic-bezier(0.165, 0.84, 0.44, 1) 100ms;
-}
-
-.backdrop-form__text-fill {
-  font-family: 'Roboto';
-  width: 508px;
-  height: 120px;
-  padding: 12px 16px;
-  cursor: pointer;
-}
-
-.backdrop-form__box {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  margin-top: 20px;
-  margin-bottom: 30px;
-  display: flex;
-  align-items: center;
-}
-
-.backdrop-form__icon {
-  width: 15px;
-  height: 15px;
-  transform: translate(15px, -30px);
-  transition: fill 250ms cubic-bezier(0.165, 0.84, 0.44, 1) 100ms;
-}
-
-.backdrop-form__button_send {
-  font-family: 'Roboto';
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 200px;
-  height: 50px;
-  background: #188CE8;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: 1px solid #FFFFFF;
-  color: #FFFFFF;
-  margin: 0 auto;
-}
-
-.backdrop-form__checkbox {
-  width: 16px;
-  height: 15px;
-  margin-right: 9px;
-}
-
-.backdrop-form__agree {
-  font-family: 'Roboto';
-  color: #757575;
-}
-
-.backdrop-form__rule {
-  font-family: 'Roboto';
-  text-decoration: underline;
-  color: #2196F3;
-}
-
-.backdrop-form__icon {
-  width: 18px;
-  height: 18px;
-  transition: fill 250ms cubic-bezier(0.165, 0.84, 0.44, 1) 100ms;
 }
