--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,3 +1,12 @@
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  font-family: 'Roboto';
+}
+
 a {
   text-decoration: none;
 }
@@ -9,6 +18,6 @@ ul {
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, p {
   margin: 0;
 }
