--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,19 +1,4 @@
-.hero-section__button {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 700;
-  line-height: 30px;
-  background-color: #4e4b4b;
-  color: #777784;
-  height: 50px;
-  width: 200px;
-  border-radius: 5px;
-  box-shadow: 2px 2px 2px 2px #444242;
-  border: 2px;
-  transition: color 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 25ms ,background-color 1s cubic-bezier(0.165, 0.84, 0.44, 1) 100ms;
-}
-
-.hero-section .container {
+.hero-section {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -22,24 +7,36 @@
   padding-top: 200px;
   padding-bottom: 200px;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/img-2/Img.jpg);
-}
-
-.hero-section__title {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 60px;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  justify-content: space-evenly;
-  display: flex;
-  color: #FFFFFF;
-  cursor: auto;
-}
-
-.hero-section__button:hover {
-  background-color: #2196F3;
-  color: #FFFFFF;
+  &__button {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    line-height: 30px;
+    background-color: $hero-background-color;
+    color: $hero-button-color;
+    height: 50px;
+    width: 200px;
+    margin-left: 500px;
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px 2px $hero-box-shadow;
+    border: 2px;
+    transition: color 250ms $hero-transition 25ms ,background-color 1s $hero-transition 100ms;
+    &:hover {
+      background-color: $header-color;
+      color: $hero-color;
+    }
+  }
+  &__title {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 60px;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    justify-content: space-evenly;
+    display: flex;
+    color: $hero-color;
+  }
 }
