--- a/sass/components/_qualities.scss
+++ b/sass/components/_qualities.scss
@@ -1,29 +1,3 @@
-.qualities-list__title {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #212121;
-  display: flex;
-  flex-direction: column;
-}
-
-.qualities-list__item::before {
-  content: "";
-  width: 270px;
-  height: 120px;
-  background: #F5F4FA;
-  border-radius: 4px;
-  border: none;
-  display: block;
-  margin-bottom: 30px;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
 .qualities-list__item:nth-child(1)::before {
   background-image: url(../img/img-2/antenna-1.png);
 }
@@ -50,21 +24,43 @@
   padding-bottom: 94px;
 }
 
-.qualities-list__text {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
-
-.qualities-list__item {
-  margin: 30px;
-}
-
 .qualities-list {
   display: flex;
   flex-direction: row;
+  &__item {
+    margin: 30px;
+    &::before {
+      content: "";
+      width: 270px;
+      height: 120px;
+      background: $qualities-background-color;
+      border-radius: 4px;
+      border: none;
+      display: block;
+      margin-bottom: 30px;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+  }
+  &__title {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: $qualities-color;
+    display: flex;
+    flex-direction: column;
+  }
+  &__text {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    color: $header-contact;
+  }
 }
