--- a/sass/portfolio.css
+++ b/sass/portfolio.css
@@ -1,3 +1,12 @@
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  font-family: "Roboto";
+}
+
 a {
   text-decoration: none;
 }
@@ -9,16 +18,8 @@ ul {
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, p {
   margin: 0;
-}
-
-.client-section .container {
-  background: #FFFFFF;
-}
-
-.footer {
-  background: #2F303A;
 }
 
 .header .container {
@@ -41,7 +42,6 @@ h1, h2, h3, h4, h5, h6 {
   color: #2196F3;
   margin-right: 93px;
 }
-
 .header-section__logo {
   font-family: "Raleway";
   font-style: normal;
@@ -57,34 +57,13 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: space-evenly;
   height: 80px;
 }
-
 .header-list__item {
   margin-left: 55px;
   padding-top: 32px;
 }
-
-.header-media__item {
-  height: 20px;
-  display: flex;
-  justify-content: center;
-}
-
-.header-list__links {
-  color: #2196F3;
-}
-
-.header-media__icon {
-  width: 20px;
-  height: 18px;
-  fill: gray;
-  margin-right: 10px;
-  margin-left: 30px;
-}
-
 .header-list__item:nth-child(2) {
   margin-left: 50px;
 }
-
 .header-list__item:nth-child(2) {
   font-family: "Roboto";
   font-style: normal;
@@ -95,11 +74,6 @@ h1, h2, h3, h4, h5, h6 {
   color: #212121;
   border-bottom: 4px solid #2196F3;
 }
-
-.header-list__link:hover {
-  color: #2196F3;
-}
-
 .header-list__link {
   font-family: "Roboto";
   font-style: normal;
@@ -110,13 +84,11 @@ h1, h2, h3, h4, h5, h6 {
   color: #212121;
   transition: color 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 25ms;
 }
-
-.header-media__contact {
-  transition: color 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 50ms;
+.header-list__link:hover {
+  color: #2196F3;
 }
-
-.header-media__icon {
-  transition: fill 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 50ms;
+.header-list__links {
+  color: #2196F3;
 }
 
 .header-media__item:hover .header-media__icon, .header-media__item:hover .header-media__contact {
@@ -129,11 +101,11 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: auto;
   align-items: center;
 }
-
-.header-media .header-media__item {
+.header-media__item {
+  height: 20px;
   display: flex;
+  justify-content: center;
 }
-
 .header-media__contact {
   font-family: "Roboto";
   font-style: normal;
@@ -142,10 +114,18 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 16px;
   letter-spacing: 0.02em;
   color: #757575;
+  transition: color 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 50ms;
 }
-
 .header-media__contact:hover {
   color: #2196F3;
+}
+.header-media__icon {
+  width: 20px;
+  height: 18px;
+  fill: #757575;
+  margin-right: 10px;
+  margin-left: 30px;
+  transition: fill 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 50ms;
 }
 
 .buttons-section .container {
