--- a/sass/utilis/_variables.scss
+++ b/sass/utilis/_variables.scss
@@ -1,7 +1,12 @@
-.client-section .container {
-  background: #FFFFFF;
-}
-
-.footer {
-  background: #2F303A;
-}
+$header-color: #2196F3;
+$header-transition: cubic-bezier(0.39, 0.575, 0.565, 1);
+$header-contact:#757575;
+$hero-box-shadow: #444242;
+$hero-button-color: #777784;
+$hero-background-color: #4e4b4b;
+$hero-transition: cubic-bezier(0.39, 0.575, 0.565, 1);
+$hero-color: #FFFFFF;
+$modal-color: #188CE8;
+$modal-transition: cubic-bezier(0.39, 0.575, 0.565, 1);
+$qualities-color: #212121;
+$qualities-background-color: #F5F4FA;
