--- a/sass/utilis/_variables.scss
+++ b/sass/utilis/_variables.scss
@@ -10,3 +10,4 @@ $modal-color: #188CE8;
 $modal-transition: cubic-bezier(0.39, 0.575, 0.565, 1);
 $qualities-color: #212121;
 $qualities-background-color: #F5F4FA;
+$team-color: #AFB1B8;
